Test with multiple pings

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "ping"
   ],
   "dependencies": {
-    "net-ping": "1.1.x"
+    "net-ping": "1.1.x",
+    "underscore": "1.6.x"
   },
   "license": "MIT",
   "engines": {
